--- a/lib/views/popup.html
+++ b/lib/views/popup.html
@@ -4,7 +4,7 @@
     <title>Social Street Smart Extension</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
     <link rel="stylesheet" href="../styles/popup.css">
-    <script src="../scripts/popup.js"></script>
+    <script src="../assets/js/popup.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -45,7 +45,7 @@
   <div  id="whitelist">
     <strong>Whitelist this website:</strong> 
     <div class="onoffswitch">
-      <input type="checkbox" name="whitelistSwitch" class="onoffswitch-checkbox" id="whitelistSwitch" checked>
+      <input type="checkbox" name="whitelistSwitch" class="onoffswitch-checkbox" id="whitelistSwitch">
       <label class="onoffswitch-label" for="whitelistSwitch"></label>
     </div>
     
