--- a/lib/views/settings.html
+++ b/lib/views/settings.html
@@ -30,26 +30,26 @@
                      <h3>Fake News</h3>
                      <div class="form-item">
                         <label class="form-item__label">Disable the feature</label>
-                        <div class="form-item__control toggle fake-news">
+                        <div class="form-item__control toggle disable_fake_news">
                            <div class="toggle__handle "></div>
                         </div>
                      </div>
                      <div id= "fake-news-opt">
                         <div class="form-item">
                            <label class="form-item__label">Enable on News Websites</label>
-                           <div class="form-item__control toggle">
+                           <div class="form-item__control toggle FN_enable_news">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
                         <div class="form-item">
                            <label class="form-item__label">Enable on Facebook</label>
-                           <div class="form-item__control toggle">
+                           <div class="form-item__control toggle FN_facebook">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
                         <div class="form-item">
                            <label class="form-item__label">Enable on Twitter</label>
-                           <div class="form-item__control toggle">
+                           <div class="form-item__control toggle FN_twitter">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
@@ -58,26 +58,26 @@
                      <h3>Hate Speech</h3>
                      <div class="form-item">
                         <label class="form-item__label">Disable this feature</label>
-                        <div class="form-item__control toggle hate-speech">
+                        <div class="form-item__control toggle disable_hate_speech">
                            <div class="toggle__handle"></div>
                         </div>
                      </div>
                      <div id="hate-speech-opt">
                         <div class="form-item">
                            <label class="form-item__label">Enable on Facebook</label>
-                           <div class="form-item__control toggle">
+                           <div class="form-item__control toggle HS_facebook ">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
                         <div class="form-item">
                            <label class="form-item__label">Enable on Twitter</label>
-                           <div class="form-item__control toggle">
+                           <div class="form-item__control toggle HS_twitter">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
                         <div class="form-item">
                            <label class="form-item__label">Enable on all rest of the web</label>
-                           <div class="form-item__control toggle">
+                           <div class="form-item__control toggle HS_web">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
@@ -87,7 +87,7 @@
                      <div class="form-item">
                         <label class="form-item__label">Blur/Hide the post</label>
                         <p style ="font-size: 2rem;"> Blur </p>
-                        <div class="form-item__control toggle">
+                        <div class="form-item__control toggle HS_hide">
                            <div class="toggle__handle"></div>
                         </div>
                         <p style ="font-size: 2rem;">Hide</p>
@@ -104,26 +104,26 @@
                      <h3>Click Baits</h3>
                      <div class="form-item">
                         <label class="form-item__label">Disable this feature</label>
-                        <div class="form-item__control toggle click-baits">
+                        <div class="form-item__control toggle disable_click_baits">
                            <div class="toggle__handle"></div>
                         </div>
                      </div>
                      <div id="click-baits-opt">
                         <div class="form-item">
                            <label class="form-item__label">Enable on Facebook</label>
-                           <div class="form-item__control toggle">
+                           <div class="form-item__control toggle CB_facebook">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
                         <div class="form-item">
                            <label class="form-item__label">Enable on Twitter</label>
-                           <div class="form-item__control toggle">
+                           <div class="form-item__control toggle CB_twitter">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
                         <div class="form-item">
                            <label class="form-item__label">Enable on rest of the web</label>
-                           <div class="form-item__control toggle">
+                           <div class="form-item__control toggle CB_web">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
@@ -132,33 +132,33 @@
                      <h3>Profanity Words</h3>
                      <div class="form-item">
                         <label class="form-item__label">Disable this feature</label>
-                        <div class="form-item__control toggle profanity-words">
+                        <div class="form-item__control toggle disable_profanity_words">
                            <div class="toggle__handle"></div>
                         </div>
                      </div>
                      <div id="profanity-words-opt">
                         <div class="form-item">
                            <label class="form-item__label">Enable on Facebook</label>
-                           <div class="form-item__control toggle">
+                           <div class="form-item__control toggle PW_facebook">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
                         <div class="form-item">
                            <label class="form-item__label">Enable on Twitter</label>
-                           <div class="form-item__control toggle">
+                           <div class="form-item__control toggle PW_twitter">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
                         <div class="form-item">
                            <label class="form-item__label">Enable on rest of the web</label>
-                           <div class="form-item__control toggle">
+                           <div class="form-item__control toggle PW_web">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
                      </div>
                      <br>
                      <br>
-                     <div id="done" class="buttons"><a href="#"></a><button class="button">Done</button></div>
+                     <div class="buttons"><a href="#"></a><button id = "save_settings" class="button">Done</button></div>
                   </div>
                </div>
             </div>
