display whitelisted sites on settings page

--- a/lib/views/settings.html
+++ b/lib/views/settings.html
@@ -94,10 +94,7 @@
                      </div>
                      <br>
                      <h3>Sites whitelisted by the user:</h3>
-                     <ul class="list-group list-group-horizontal">
-                        <li class="list-group-item">stackoverflow.com</li>
-                        <li class="list-group-item">washingtonpost.com</li>
-                        <li class="list-group-item">guardian.com</li>
+                     <ul id="ul_whitelist" class="list-group list-group-horizontal">
                      </ul>
                   </div>
                   <div class="grid grid--half">
