Add Reddit support

--- a/lib/views/settings.html
+++ b/lib/views/settings.html
@@ -53,6 +53,12 @@
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
+                        <div class="form-item">
+                           <label class="form-item__label">Enable on Reddit</label>
+                           <div class="form-item__control toggle FN_reddit">
+                              <div class="toggle__handle"></div>
+                           </div>
+                        </div>
                      </div>
                      <br>
                      <h3>Hate Speech</h3>
@@ -72,6 +78,12 @@
                         <div class="form-item">
                            <label class="form-item__label">Enable on Twitter</label>
                            <div class="form-item__control toggle HS_twitter">
+                              <div class="toggle__handle"></div>
+                           </div>
+                        </div>
+                        <div class="form-item">
+                           <label class="form-item__label">Enable on Reddit</label>
+                           <div class="form-item__control toggle HS_reddit">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
@@ -119,6 +131,12 @@
                            </div>
                         </div>
                         <div class="form-item">
+                           <label class="form-item__label">Enable on Reddit</label>
+                           <div class="form-item__control toggle CB_reddit">
+                              <div class="toggle__handle"></div>
+                           </div>
+                        </div>
+                        <div class="form-item">
                            <label class="form-item__label">Enable on rest of the web</label>
                            <div class="form-item__control toggle CB_web">
                               <div class="toggle__handle"></div>
@@ -143,6 +161,12 @@
                         <div class="form-item">
                            <label class="form-item__label">Enable on Twitter</label>
                            <div class="form-item__control toggle PW_twitter">
+                              <div class="toggle__handle"></div>
+                           </div>
+                        </div>
+                        <div class="form-item">
+                           <label class="form-item__label">Enable on Reddit</label>
+                           <div class="form-item__control toggle PW_reddit">
                               <div class="toggle__handle"></div>
                            </div>
                         </div>
