--- a/lib/views/settings.html
+++ b/lib/views/settings.html
@@ -155,7 +155,10 @@
                      </div>
                      <br>
                      <br>
-                     <div class="buttons"><a href="#"></a><button id = "save_settings" class="button">Done</button></div>
+                     <div class="buttons">
+                           <a href="#"></a><button id = "save_settings" class="button">Done</button>
+                           <a href="#"></a><button id = "reset" class="button">Reset all</button>
+                     </div>
                   </div>
                </div>
             </div>
