--- a/lib/views/popup.html
+++ b/lib/views/popup.html
@@ -48,10 +48,11 @@
       <input type="checkbox" name="whitelistSwitch" class="onoffswitch-checkbox" id="whitelistSwitch">
       <label class="onoffswitch-label" for="whitelistSwitch"></label>
     </div>
-    
+    <div class="buttons"><a target="_blank" href="settings.html"><button class="button">Settings</button></a></div>
   </div>
   
 </body>
 <script src="../assets/js/popup.js"></script>
+
 </html>
 
