--- a/lib/views/popup.html
+++ b/lib/views/popup.html
@@ -48,7 +48,7 @@
       <input type="checkbox" name="whitelistSwitch" class="onoffswitch-checkbox" id="whitelistSwitch">
       <label class="onoffswitch-label" for="whitelistSwitch"></label>
     </div>
-    
+     <div class="buttons"><a target="_blank" href="settings.html"><button class="button">Settings</button></a></div>
   </div>
   
 </body>
