Added support for custom API keys in the News Origin API

--- a/lib/views/settings.html
+++ b/lib/views/settings.html
@@ -200,7 +200,9 @@
 									<div class="toggle__handle"></div>
                         </div>
                         <p style ="font-size: 2rem;">On</p>
-								<button type="button" class=" button">Browse API Keys </button>
+                        <input type="password" class="form-control" id="newsKeysInput" placeholder="Google Custom Search API Keys">
+                        <button type="button" class=" button" id="showNewsKeys">Show</button>
+                        <button type="button" class=" button" id="uploadNewsKeys">Ok</button>
 							</div>
                      <br>
                      <br>
