Updates the Popup menu to support checking for News Origin

--- a/lib/views/popup.html
+++ b/lib/views/popup.html
@@ -33,13 +33,12 @@
       <fieldset>
         <legend>Check for:</legend>
         <div id="checkButtons">
-            <button id="FakeNews_button">Fake News</button>
-            <button id="NewsOrigin_button">News Origin</button>
+            <button type="button" id="NewsOrigin_button">News Origin</button>
         </div>
       </fieldset>
     </div>
 
-    <h3 id="result" > Results: </h3> <span> </span> </h3>
+    <h3 id="result" > Results: </h3> <span id="resultSpan"> </span> </h3>
   </form>
   
   <div  id="whitelist">
