--- a/lib/views/settings.html
+++ b/lib/views/settings.html
@@ -223,6 +223,23 @@
                                    </div>
                                  </div>
                            </div>
+                           <form method="post">
+                              <div class="form-item">
+                                <label>Enter your OpenAI API key</label>
+                                <div class="custom-row">
+                                  <input type="text" class="form-control" id="OpenAIKeysInput" name="apikey" placeholder="Your OpenAI API Key" style="display: block;">
+                                </div>
+                                <div class="custom-row">
+                                  <div class="col-xs-5 custom-col" id= "warning_norig"></div>
+                                  <div class="col-xs-7" style="text-align: right;">
+                                    <button type="button" class="button" id="showOpenAIKeys">Show</button>
+                                    <button type="button" class="button" id="uploadOpenAIKeys">Ok</button>
+                                  </div>
+                                </div>
+                              </div>
+                            </form>
+                          
+                     </div>
                        </div>
                         <!-- Ends here -->
                         <!-- sites whitelisted by user -->
